--- a/HTML/Portofolio-1.html
+++ b/HTML/Portofolio-1.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="C:\Users\31638\Desktop\Portofolio\CSS\styleportofolio.css">
-        <link rel="stylesheet" href="C:\Users\31638\Desktop\Portofolio\CSS\flexboxgrid.min.css">
+        <link rel="stylesheet" href="../CSS/styleportofolio.css">
+        <link rel="stylesheet" href="../CSS/flexboxgrid.min.css">
         <title>Portofolio</title>
     </head>
 <body>   
@@ -21,7 +21,7 @@
                         <li><a class="nav-link" href="#About-me">About me</a></li>
                         <li><a class="nav-link" href="#">Projecten</a></li>
                         <a href="../HTML/Portofolio-1.html" id="Logo">
-                            <img src="C:\Users\31638\Desktop\Portofolio\IMG\LOGO - Copy.png" alt="LOGO">
+                            <img src="../IMG/LOGO - Copy.png" alt="LOGO">
                         </a>
                     </ul>
                 </nav>
@@ -44,8 +44,8 @@
         <div class="projecten">
             <div class="box">
                 <div class="imgbox">
-                    <a href="C:\Users\31638\Desktop\Portofolio\HTML\PortofolioProject1.html">
-                        <img src="C:\Users\31638\Desktop\Portofolio\IMG\Screenshot 2021-10-13 114357.png">
+                    <a href="../HTML/PortofolioProject1.html">
+                        <img src="../IMG/Screenshot 2021-10-13 114357.png">
                     </a>
                     <div class="decoratie">
                         <div class="content">
@@ -56,20 +56,24 @@
             </div>
             <div class="box">
                 <div class="imgbox">
-                    <img src="C:\Users\31638\Desktop\Portofolio\IMG\b599828f4b9886bed977f13bfa3e0061.jpg">
+                    <a href="../HTML/PortofolioProject2.html">
+                        <img src="../IMG/snippetjarlp.png">
+                    </a>
                     <div class="decoratie">
                         <div class="content">
-                            <h1>Wordt aan gewerkt</h1>
+                            <h1>Snippetjar</h1>
                         </div>   
                     </div>
                 </div>
             </div>
             <div class="box">
                 <div class="imgbox">
-                    <img src="C:\Users\31638\Desktop\Portofolio\IMG\b599828f4b9886bed977f13bfa3e0061.jpg">
+                    <a href="../HTML/PortofolioProject3.html">
+                        <img src="../IMG/jandekapper.png">
+                    </a>
                     <div class="decoratie">
                         <div class="content">
-                            <h1>Wordt aan gewerkt</h1>
+                            <h1>Kappers website</h1>
                         </div>   
                     </div>
                 </div>
@@ -86,7 +90,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="img-gezicht">
-                    <img src="C:\Users\31638\Desktop\Portofolio\IMG\2148dee1-23d9-4057-b513-54515d3e0922.JPG" id="Gezicht">
+                    <img src="../IMG/2148dee1-23d9-4057-b513-54515d3e0922.JPG" id="Gezicht">
                 </div>
             </div>
         </div>  
@@ -97,12 +101,12 @@
                 <div class="Text_CV">
                     <h2>CV</h2><p>Hier is mijn CV hier in staan mijn werkervaringen, opleiding, kwaliteiten en mijn werkmotivatie.</p>
                     <button id="CV-button">
-                        <a onClick="openTab(this)" href="#" name="C:\Users\31638\Desktop\Portofolio\CV.pdf">Download Pdf</a>
+                        <a onClick="openTab(this)" href="../CV.pdf" name="PDF">Download Pdf</a>
                     </button>
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="C:\Users\31638\Desktop\Portofolio\IMG\docpng.png" alt="Docimg" id="Docimg">
+                <img src="../IMG/docpng.png" alt="Docimg" id="Docimg">
             </div>
         </div>      
 
@@ -116,19 +120,19 @@
             <div class="col-sm-6">
                 <div class="Git">
                     <a href="https://github.com/canorsce">
-                        <img src="C:\Users\31638\Desktop\Portofolio\IMG\github_PNG40.png" alt="github_PNG40">
+                        <img src="../IMG/github_PNG40.png" alt="github_PNG40">
                         <p>click on me</p>
                     </a>
                 </div>
                 <div class="number">
                     <span>
-                        <img src="C:\Users\31638\Desktop\Portofolio\IMG\WhatsApp_Logo_1.png" alt="github_PNG40">
+                        <img src="../IMG/WhatsApp_Logo_1.png" alt="github_PNG40">
                         <p>+31638270965</p>
                     </span>
                 </div>
             </div>
         </div>  
     </div>
-<script src="C:\Users\31638\Desktop\Portofolio\JS\Portofolio.js"></script>
+<script src="../JS/Portofolio.js"></script>
 </body>
 </html>
