--- a/HTML/PortofolioProject1.html
+++ b/HTML/PortofolioProject1.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project1</title>
-    <link rel="stylesheet" href="C:\Users\31638\Desktop\Portofolio\CSS\styleproject1.css">
-    <link rel="stylesheet" href="C:\Users\31638\Desktop\Portofolio\CSS\flexboxgrid.min.css">
+    <link rel="stylesheet" href="../CSS/styleproject1.css">
+    <link rel="stylesheet" href="../CSS/flexboxgrid.min.css">
 </head>
 <body>
     <div class="Portofolio">
@@ -15,10 +15,10 @@
                 <nav>
                     <ul class="nav-ul hide-ul">
                         <li><a class="nav-link" href="../HTML/Portofolio-1.html">Portofolio</a></li>
-                        <li><a class="nav-link" onclick= "alert('Nog niet beschikbaar');" href="">Project3</a></li>
-                        <li><a class="nav-link" onclick= "alert('Nog niet beschikbaar');" href="">Project2</a></li>
+                        <li><a class="nav-link" href="../HTML/PortofolioProject3.html">Kappers website</a></li>
+                        <li><a class="nav-link" href="../HTML/PortofolioProject2.html">Snippetjar</a></li>
                         <a href="../HTML/Portofolio-1.html" id="Logo">
-                            <img src="C:\Users\31638\Desktop\Portofolio\IMG\LOGO - Copy.png" alt="LOGO">
+                            <img src="../IMG/LOGO - Copy.png" alt="LOGO">
                         </a>
                     </ul>
 
